--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<title>
-Intro to MapView - Create a 2D map | Sample | ArcGIS API for JavaScript 4.18
-</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
 
-<link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css"/>
-<script src="https://js.arcgis.com/4.22/"></script>
+<title>Project 1 2D Map View: Education in the USA</title>
+
+<link
+rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css"/>
+    
+<script src="https://js.arcgis.com/4.18/"></script>
 
 
 <link rel = "stylesheet" href ="style.css"/>
